fix(ui) FormControl leading (icons, text nodes) alignment

--- a/packages/ui/src/Form/FormControl/FormControl.module.scss
+++ b/packages/ui/src/Form/FormControl/FormControl.module.scss
@@ -65,7 +65,6 @@
   }
 
   &_xl {
-    height: 65px; /* FF line-height bug */
     padding: 18px 19px 19px;
 
     border-radius: var(--ui-border-radius-xl);
@@ -99,22 +98,27 @@
 
 .form-control__prefix,
 .form-control__suffix {
+  
   flex: none;
   
   line-height: inherit;
   white-space: nowrap;
-
-  & > * {
-    display: inline-block;
-    vertical-align: middle;
-  }
 }
+// Prefixes aligned by center of Control's first line
 .form-control__prefix {
   align-self: flex-start;
   margin-right: 7px;
+
+  & > svg {
+    margin-top: 3px;
+  }
 }
+// Prefixes aligned by center of Control element
 .form-control__suffix {
-  align-self: baseline;
+  display: flex;
+  align-self: stretch;
+  align-items: center;
+
   margin-left: 7px;
 }
 
